...
                    android:layout_below="@id/profileCardView"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"
                    tools:text="ALVAREZ.tech" />

            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/subsCardView"
...
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="setFavorite"
        android:src="@drawable/ic_star_border"
        app:layout_anchor="@id/bannerImageView"
...
