...
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <EditText
                android:id="@+id/queryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="textFilter"
...
